<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_control</name>
  <version>0.0.0</version>
  <description>Control for the NU Turtle.</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2launch</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nuturtlebot_msgs</depend>
  <depend>nuturtle_description</depend>
  <depend>turtlelib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
